[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Camera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 509.759, 300 )

[node name="Camera2D" type="Camera2D"]
current = true
drag_margin_v_enabled = true
drag_margin_top = 1.0
drag_margin_bottom = 1.0
script = ExtResource( 1 )

[node name="Front" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Front"]
shape = SubResource( 1 )

[connection signal="body_entered" from="Front" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Front" to="." method="_on_Area2D_body_exited"]
